@@ -1,3 +1,9 @@
+2018-04-02  Jim Wilson  <jimw@sifive.com>
+
+	* gcc.target/riscv/pr84660.c: New.
+	* gcc.target/riscv/shift-and-1.c: New.
+	* gcc.target/riscv/shift-and-2.c: New.
+
 2018-04-02  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/85102
